[package]
name = "pktstrings"
version = "1.3.0"
edition = "2021"
rust-version = "1.60"
authors = ["Pete Wicken <petewicken@gmail.com>"]
description = "Like Unix 'strings' command but packet-aware"
readme = "README.md"
homepage = "https://github.com/JamoBox/pktstrings"
repository = "https://github.com/JamoBox/pktstrings"
license = "MIT"
keywords = ["packet-analyzer", "pcap", "sniffing", "packet"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = {version = "4", features = ["derive"]}
pcap = "0"
colored = "2"
dns-lookup = {version = "1", optional = true}
cfg-if = "1"
libc = "0"
regex = "1.7.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
bland = ["colored/no-color"]
resolve = ["dns-lookup"]

[profile.dev]
split-debuginfo = "packed"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "pktstrings"
path = "src/lib/lib.rs"

[[bin]]
name = "pktstrings"
path = "src/bin/pktstrings.rs"

[[bench]]
name = "net_benchmark"
harness = false
