[package]
name = "pktstrings"
version = "1.4.1"
edition = "2021"
rust-version = "1.60"
authors = ["Pete Wicken <petewicken@gmail.com>"]
description = "Like Unix 'strings' command but packet-aware"
readme = "README.md"
homepage = "https://github.com/JamoBox/pktstrings"
repository = "https://github.com/JamoBox/pktstrings"
license = "MIT"
keywords = ["packet-analyzer", "pcap", "sniffing", "packet"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = {version = "4", features = ["derive"]}
pcap = "1"
colored = "2"
dns-lookup = {version = "2", optional = true}
cfg-if = "1"
libc = "0"
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
bland = ["colored/no-color"]
resolve = ["dns-lookup"]

[profile.dev]
split-debuginfo = "packed"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "pktstrings"
path = "src/lib/lib.rs"

[[bin]]
name = "pktstrings"
path = "src/bin/pktstrings.rs"

[[bench]]
name = "net"
harness = false

[[bench]]
name = "strings"
harness = false
